--- a/templates/admin/add.html.twig
+++ b/templates/admin/add.html.twig
@@ -51,7 +51,7 @@
         </div>
 
         <div class="divForm">
-            <h6>Lien de la video youtube</h6>
+            <h6>ID de la video youtube</h6>
             <input type="text" id="link" placeholder="A0QkGThnKNQ"/>
         </div>
 
