--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,6 +22,7 @@
         <script src="https://kit.fontawesome.com/a393bd0d5f.js" crossorigin="anonymous"></script>
     </head>
     <body>
+        <div id="load"><img src="{{ asset('images/load.gif') }}" /></div>
     
         {% block body %}{% endblock %}
         {% block javascripts %}{% endblock %}
