--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -6,7 +6,8 @@
 
 <div>
     <header>
-        <h1>BlindTest on the Flex ! <br><span>(version Alpha)</span> </h1>
+        <img src="{{ asset('images/logoBlindTest.png') }}" />
+        <h1><span>(version Alpha)</span> </h1>
     </header>
     
 
@@ -53,7 +54,7 @@
         </div>
 
         <div class="boxForm sousTheme">
-            <h5>Sous thème (s) :</h5>
+            <h5>Musique style :</h5>
             <div>
                 <div>
                     <input id="checkThemeAutre" type="checkbox" checked/> Autre<br>
