--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,17 +3,19 @@ html, body {
     margin: 0;
     padding: 0;
     font-family: 'Raleway', sans-serif;
-    background-color: #02001A;
+    background-color: #242624;
     color : white;
   }
 
 h1{
     font-family: 'Viga', sans-serif;
+    margin: 0px;
 }
 h1 span{
     font-size: 20px;
     font-family: 'Raleway', sans-serif;
     color: #E88712 ;
+    
 }
 h2{
     font-family: 'Viga', sans-serif;
@@ -46,6 +48,9 @@ header{
     width: 100%;
     padding: 5px;
     height: auto;
+}
+header img{
+    height: 150px;
 }
 .button{
     display: block;
@@ -93,6 +98,9 @@ header{
     justify-content: space-around;
 }
 .boxForm > div{
+    text-align: left;
+}
+.boxForm p{
     text-align: left;
 }
 .annotation{
@@ -162,11 +170,12 @@ header{
 }
 
 #barreInfo{
+    display: none;
     position: absolute;
     left: 0;
     top: 50%;
     transform: translateY(-50%);
-    background-color: #02001a;
+    background-color: #242624;
     border: solid 1px white;
     color: white;
     height: auto;
@@ -202,4 +211,21 @@ header{
     width: 45%;
 }
 
+
+
+#load{
+    background-color: #242624;
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 10000;
+}
+#load > img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+}
 
