--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -10,7 +10,10 @@
 
         <div class="container-index-head">
             <a class="buttonAdd" href="/admin/add" ><i class="fas fa-plus"></i> Ajouter une musique</a>
+            
             <h2>{{musiques | length }}  musiques</h2>
+
+            <a class="buttonReport" href="/admin/report">Report<div><span>3</span></div></a>
         </div>
 
 
