--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,8 @@
         <script src="{{ asset('js/ajax.js') }}"></script>
         <script src="{{ asset('js/main.js') }}"></script>
         <script src="{{ asset('js/menu.js') }}"></script>
+        <script src="{{ asset('js/report.js') }}"></script>
+        <script src="{{ asset('js/propMusique.js') }}"></script>
         
         <link rel="stylesheet" type="text/css" href="{{ asset('css/style.css') }}">
 
