--- a/public/css/style.css
+++ b/public/css/style.css
@@ -36,6 +36,13 @@ h6{
     font-size: 16px;
     margin: 0;
 }
+input[type=number]{
+    background-color: #242624;
+    color: white;
+    text-align: center;
+    border: solid 1px white;
+    border-radius: 2px;
+}
 #player{
     overflow: hidden;
     height: 0px;
@@ -44,13 +51,12 @@ h6{
 
 header{
     text-align: center;
-    box-shadow: 0px 0px 5px silver;
     width: 100%;
     padding: 5px;
     height: auto;
 }
 header img{
-    height: 150px;
+    height: 100px;
 }
 .button{
     display: block;
@@ -87,11 +93,19 @@ header img{
 }
 .boxForm{
     text-align: left;
-    border: solid 1px silver;
+    /*border: solid 1px silver;*/
     border-radius: 10px;
     text-align: center;
     padding: 10px;
     margin: 10px;
+    background-color: #2f302f;
+    box-shadow: 0px 5px 5px black;
+    transition: 0.3s;
+}
+.boxForm:hover{
+    transform: scale(1.1);
+    box-shadow: 0px 15px 10px black;
+    transition: 0.3s;
 }
 .boxForm > div{
     display: flex;
@@ -111,7 +125,29 @@ header img{
 #compteur{
     font-family: 'Josefin Sans', sans-serif;
     text-align: center;
+    display: flex;
+    justify-content: center;
     font-size: 120px;
+    text-shadow: 0px 0px 2px white;
+    color: #80ECFF;
+}
+@keyframes compteur{
+    0%{
+        opacity: 0;
+        transform: translateY(-100%);
+    }
+    40%{
+        opacity: 1;
+        transform: translateY(0%);
+    }
+    60%{
+        opacity: 1;
+        transform: translateY(0%);
+    }
+    100%{
+        opacity: 0;
+        transform: translateY(100%);
+    }
 }
 #reponse{
     font-family: 'Viga', sans-serif;
@@ -130,13 +166,19 @@ header img{
 }
 .addMusique{
     position: absolute;
-    bottom: 0;
-    right: 0;
-    background-color: red;
+    top: 30px;
+    right: 30px;
+    background-color: #2980B9;
+    border-radius: 20px;
     color: white;
     font-size: 20px;
     padding: 10px 30px;
-
+    text-decoration: none;
+    transition: 0.3s;
+}
+.addMusique:hover{
+    transform: scale(1.1);
+    transition: 0.3s;
 }
 #pause{
     margin-top: 20px;
@@ -229,3 +271,40 @@ header img{
     transform: translate(-50% , -50%);
 }
 
+
+#nbMusiqueTotal{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    font-size: 15px;
+    letter-spacing: 1px;
+}
+#nbMusiqueTotal > div{
+    background-color: #2980B9;
+    color: white;
+    width: 200px;
+    margin: 5px 2px;
+    padding: 5px 2px;
+    border-radius: 3px;
+}
+
+#report{
+    background-color: #B03A2E;
+    border-radius: 3px;
+    border: solid 1px #B03A2E;
+    color: white;
+    width: 200px;
+    margin: 30px auto;
+    text-align: center;
+    display: none;
+    letter-spacing: 2px;
+    font-size: 18px;
+    cursor: pointer;
+    transition: 0.3s;
+    font-weight: bold;
+}
+#report:hover{
+    background-color: white;
+    transition: 0.3s;
+    color: #B03A2E;
+}
