--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -10,10 +10,14 @@
 
         <div class="container-index-head">
             <a class="buttonAdd" href="/admin/add" ><i class="fas fa-plus"></i> Ajouter une musique</a>
+
+            <a class="buttonPropose" href="/admin/propose" ><i class="fas fa-caret-square-up"></i> Propostions des musiques</a>
+
+            <a class="buttonReport" href="/admin/report">Report<div><span>{{ report | length }}</span></div></a>
             
             <h2>{{musiques | length }}  musiques</h2>
 
-            <a class="buttonReport" href="/admin/report">Report<div><span>3</span></div></a>
+            
         </div>
 
 
