--- a/templates/main/index.html.twig
+++ b/templates/main/index.html.twig
@@ -2,6 +2,28 @@
 
 {% block title %}BindTest On The Flex!{% endblock %}
 
+{% block stylesheets %}
+<link rel="stylesheet" type="text/css" href="{{ asset('css/style.css') }}">
+
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+        <script src="{{ asset('js/youtube.js') }}"></script>
+        <script src="{{ asset('js/ajax.js') }}"></script>
+        <script src="{{ asset('js/main.js') }}"></script>
+        <script src="{{ asset('js/menu.js') }}"></script>
+        <script src="{{ asset('js/report.js') }}"></script>
+        <script src="{{ asset('js/propMusique.js') }}"></script>
+        
+
+        <link rel="icon" href="{{ asset('images/logo.png') }}" />
+        
+
+        <link href="https://fonts.googleapis.com/css?family=Viga&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
+
+        <script src="https://kit.fontawesome.com/a393bd0d5f.js" crossorigin="anonymous"></script>
+{% endblock %}
+
 {% block body %}
 
 <div>
@@ -78,6 +100,8 @@
         </div>
     
     </div>
+
+
     <div id="nbMusiqueTotal"></div>
     <div id="button-start" class="button">NOUVELLE PARTIE <span><i class="fas fa-chevron-right"></i> <i class="fas fa-chevron-right"></i></span></div>
 
@@ -107,7 +131,7 @@
     
 
     
-    <a href="/admin" class="addMusique"><i class="fas fa-plus"></i> Ajouter des musiques</a>
+    <a href="/proposemusique" class="addMusique"><i class="fas fa-plus"></i> Ajouter des musiques</a>
 
 
 
