new design mobile

--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -41,7 +41,7 @@
         <div id="regleJeu">
             <h2>Règle du jeu</h2>
             <div><span>1.</span> Trouvez vous des amis !</div>
-            <div><span>2.</span> Confugurez votre blind test</div>
+            <div><span>2.</span> Configurez votre blind test</div>
             <div><span>3.</span> Lancez une partie</div>
             <div><span>4.</span> Celui qui cri le plus vite la bonne reponse gagne !</div>
             <div><span>5.</span> Enjoy !</div>
