--- a/templates/main/accueil.html.twig
+++ b/templates/main/accueil.html.twig
@@ -133,6 +133,18 @@
         <span class="messagePause">La pause sera active à la fin de la musique</span>
 
         <div id="report">signaler</div>
+        <div id="msgReport">MERCI !<br>Cette musique sera vérifier par un administrateur ! </div>
+
+
+        <div id="openInfo"><i class="fas fa-info"></i></div>
+        <div id="barreInfo">
+            <div>
+                <div id="closeInfo"><i class="fas fa-chevron-left"></i></div>
+                <h4>Information :</h4>
+                <div id="numberMusique">0/50 musiques</div>
+                <div class="containerMusiquePasse"></div>
+            </div>
+       </div>
 
 
     </section>
